# rules_prometheus

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  def.bzl  deps.bzl
.github/workflows/: ci.yaml  linux.yaml
examples/: BUILD.bazel.test  WORKSPACE  prometheus-sample.yaml  prometheus_rule_jsonnet.jsonnet  promtool-rule.yaml
internal/: BUILD.bazel  BUILD.prometheus.dist.bazel.tpl  platforms.bzl  repos.bzl  rules.bzl  toolchains.bzl
internal/alertmanager/: BUILD.amtool.dist.bazel.tpl  alertmanager_versions.bzl  repos.bzl  rules.bzl  toolchains.bzl
internal/prometheus/: BUILD.prometheus.dist.bazel.tpl  prometheus_versions.bzl  repos.bzl  rules.bzl  toolchains.bzl
tests/: BUILD.bazel  alertmanager_config.json  alertmanager_jsonnet_multiple.jsonnet  prometheus_rule_testcases.jsonnet
